# como

./: .gitignore  .gitmodules  CMakeLists.txt  GetPrebuilts.sh  MakeOptionalExternal.sh  README.md
como/runtime/: CMakeLists.txt  ComoConfig.cpp  ComoConfig.h  ComoContext.cpp  ComoContext.h  ComoerrorHelper.cpp  ComoerrorHelper.h  comoapi.h  comodef.h  comoerror.h  comoerrorHelper.cpp  comotypes.h  runtime.cpp
como/runtime/cdl/: ComoFunctionSafetyObject.cdl  base.cdl  reflection.cdl  rpc.cdl
como/runtime/component/: CBootClassLoader.cpp  CBootClassLoader.h  comoobjapi.cpp  comoobjapi.h
como/runtime/metadata/: Component.h  MetadataSerializer.cpp
como/runtime/monitor/: CMakeLists.txt  CircleBuffer.h  CpuCoreUtils.cpp  CpuCoreUtils.h  DbusUtils.cpp  DbusUtils.h  MarshalUtils.cpp  MarshalUtils.h  RuntimeMonitor.cpp  RuntimeMonitor.h
como/runtime/reflection/: CArgumentList.cpp  CArgumentList.h  CMakeLists.txt  CMetaCoclass.cpp  CMetaCoclass.h  CMetaComponent.cpp  CMetaComponent.h  CMetaConstant.cpp  CMetaConstant.h  CMetaConstructor.cpp  CMetaConstructor.h  CMetaEnumeration.cpp  CMetaEnumeration.h  CMetaEnumerator.cpp  CMetaEnumerator.h  CMetaInterface.cpp  CMetaInterface.h  CMetaMethod.cpp  CMetaMethod.h  CMetaParameter.cpp  CMetaParameter.h  CMetaType.cpp  CMetaType.h  CMetaValue.h  comoreflapi.h  invoke_aarch32.s  invoke_riscv64.s  invoke_x32.s  reflHelpers.cpp  reflHelpers.h  reflection.cpp  reflection.h
como/runtime/rpc/: CMakeLists.txt  CProxy.cpp  CProxy.h  CStub.cpp  CStub.h  ThreadPoolChannelInvoke.cpp  ThreadPoolChannelInvoke.h  comorpc.cpp  comorpc.h  registry.cpp  registry.h
como/runtime/rpc/ZeroMQ/: CMakeLists.txt  CZMQChannel.cpp  CZMQChannel.h  CZMQChannelFactory.cpp  CZMQChannelFactory.h  CZMQInterfacePack.cpp  CZMQInterfacePack.h  CZMQParcel.cpp  CZMQParcel.h  CZMQUtils.cpp  CZMQUtils.h  InterfacePack.cpp  InterfacePack.h  PaxosUtils.cpp  PaxosUtils.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h  ThreadPoolZmqActor.cpp  ThreadPoolZmqActor.h
como/runtime/rpc/binder/: CBinderChannel.cpp  CBinderChannel.h  CBinderChannelFactory.cpp  CBinderParcel.cpp  CBinderParcel.h  InterfacePack.cpp  InterfacePack.h
como/runtime/rpc/dbus/: CDBusChannel.cpp  CDBusChannel.h  CDBusChannelFactory.cpp  CDBusParcel.cpp  CDBusParcel.h  CMakeLists.txt  InterfacePack.cpp  InterfacePack.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h  ThreadPoolExecutor_.cpp  ThreadPoolExecutor_.h  ThreadPoolExecutor__singleThread.cpp  threadpoolexecutor__.cpp
como/runtime/type/: CMakeLists.txt  comoarray.cpp  comoarray.h  comoshbuf.cpp  comoshbuf.h  comostring.cpp  comostring.h  comotypekind.cpp  comotypekind.h  comouuid.cpp  comouuid.h
como/runtime/util/: BitSet.h  CCheckpoint.cpp  CCheckpoint.h  CMakeLists.txt  ComoFunctionSafetyObject.cpp  ComoFunctionSafetyObject.h  DebugUtils.cpp  DebugUtils.h  FSOGetterSetter.cpp  FSOGetterSetter.h  IP_Utils.cpp  IP_Utils.h  MemPool.cpp  MemPool.h  StrToX_Hashmap.cpp  StrToX_Hashmap.h  StringToStringHashmap.cpp  StringToStringHashmap.h  ThreadSafety.h  ThreadStack.cpp  ThreadStack.h  TimespecUtilities.h  TimespecUtils.h  VerifiedU64Pointer.cpp  VerifiedU64Pointer.h  arraylist.h  comoclsobj.cpp  comoclsobj.h  comojson.h  comolock.h  comolog.cpp  comolog.h  comoobj.cpp  comoobj.h  comoref.cpp  comoref.h  comosp.h  hashmap.h  hashmapCache.h  int64.h  (+11 more)
docs/: CCDL.md  enter_debug_env.txt  git_notes.txt  issuedoc.md  tips.txt
docs/assistDeveloping/: cdlc_test_cmd.txt  cpp_test.cpp  cpp_test_aarch64.txt
docs/sample/: ICelestialBody.cdl  IEarth.cdl  IMoon.cdl  IPlanet.cdl  ISatellite.cdl  ISolarSystemPlanet.cdl  IStar.cdl  ISun.cdl  SolarSystem.cdl
lang_bind/python/: README.md
lang_bind/python/ComoRuntime_module/ComoRuntime/pybind/: CMakeLists.txt  Makefile  como_pybind.cpp  makeme.sh
libcore/src/: CMakeLists.txt
servicemanager/exe/: CMakeLists.txt
servicemanager/exe/linux/: CMakeLists.txt  RpcOverZeroMQ.cpp  RpcOverZeroMQ.h  ServiceManager.cpp  ServiceManager.h  ServiceManagerMonitor.cpp  ServiceManagerMonitor.h  ServiceManagerOptions.cpp  ServiceManagerOptions.h  SmMonitor.cpp  SmMonitor.h  SmOptions.cpp  SmOptions.h  hashmap.h  main.cpp  mutex.h
servicemanager/lib/: CMakeLists.txt
servicemanager/lib/linux/: CMakeLists.txt  ServiceManager.cpp  ServiceManager.h  rpcHelpers.cpp  rpcHelpers.h
src/ccdl/: CMakeLists.txt  Options.cpp  (+1 more)
test/: CMakeLists.txt
test/compiler_extra/component/: CMakeLists.txt  CService2.cpp  CService2.h  Service2.cdl
test/libcore/libcore/util/zoneinfo/: CMakeLists.txt
test/runtime/ComoContext/: CMakeLists.txt
test/runtime/FunctionSafetyProgram_extra/client/: CMakeLists.txt  main.cpp
test/runtime/HelloWorld/client/: CMakeLists.txt  main.cpp
test/runtime/IDfromName/: CMakeLists.txt  Coclasses.cdl  Interfaces.cdl  Module.cdl  main.cpp
test/runtime/IDfromName/client/: CMakeLists.txt  main.cpp
test/runtime/IDfromName/component/: CFooBar.cpp  CFooBar.h  CMakeLists.txt  FooBarDemo.cdl  IBar.cdl
test/runtime/IP_Utils/: CMakeLists.txt  main.cpp
test/runtime/ObjectObserver_extra/component/: CMakeLists.txt  CMethodTester2.cpp  CMethodTester2.h  MethodTest2.cdl  ObjectObserverTestUnit2.cdl
test/runtime/comostring/: CMakeLists.txt  main.cpp
test/runtime/rpc/RedundantComputing/: CMakeLists.txt  main.cpp
test/runtime/rpc/clientMonitor/: CMakeLists.txt  main.cpp
test/runtime/rpc/client_local_speed/: CMakeLists.txt  main.cpp
test/runtime/rpc/serviceZMQ_remote_speed/: CMakeLists.txt  main.cpp
test/runtime/rpc/testZMQ/: CMakeLists.txt  main.cpp
test/runtime/rpc_extra/client/: CMakeLists.txt  main.cpp
test/runtime/rpc_extra/component/: CMakeLists.txt  CService2.cpp  RPCTestUnit2.cdl
test/runtime/util/: CMakeLists.txt  main.cpp  testCircleBuffer.cpp  testDebugUtils.cpp  testHashmapCache.cpp  testInt64.cpp  testLamportClock.cpp  testMac.cpp  testMempool1.cpp  testMistring.cpp  testMistring1.cpp  testMutex.cpp  testStrToX_Hashmap.cpp  testThreadStack.cpp  testTimespecUtilities.cpp  testTimespecUtils.cpp  testVerifiedU64Pointer.cpp  testhashmapCache.cpp
tools/: cdlc  comouuid  releaseCOMO.sh
(+1009 files in other folders)
